# Y4-GamesEngineering

./: CMakeLists.txt  LICENSE  README.md
lab_7_platformer/components/: cmp_sprite.cpp
lab_7_platformer/scenes/: scene_level2.cpp
lib_ecm/: ecm.cpp  ecm.h
lib_maths/: maths.h
lib_tile_level_loader/: LevelSystem.cpp  LevelSystem.h
practical_1/: main.cpp
practical_2_Pong/: main.cpp
practical_3_invaders/: bullet.cpp  bullet.h  main.cpp  ship.cpp  ship.h
practical_4_TileEngine/: main.cpp  player.cpp  player.h
practical_5_pacman/: cmp_actor_movement.cpp  cmp_actor_movement.h  cmp_sprite.cpp  cmp_sprite.h  entity.cpp  entity.h  ghost.cpp  ghost.h  main.cpp  pacman.cpp  pacman.h  player.cpp  player.h  scene.h
practical_6_physics/: main.cpp
